js262/test/language/statements/const/syntax/block-scope-syntax-const-declarations-without-initialiser.js


/*---
es6id: 13.1
description: >
    const declarations without initialiser
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();
const x;

